Fixed image overflow on the empower section (#109)
* Fix

* fix

* new fix

* fix Error page

* FIX

* fix image overflow

* @fix@

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ p {
 
 /* making the empower section responsive */
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 600px) {
    .empower-img-div {
       display: none;
    }
